Adapt liquibase-hibernate for Hibernate 7 and Grails conventions
- Rename snapshot/diff generators with 'Hibernate' prefix for clarity
- Extract NoOpConnectionProvider and NoOpMultiTenantConnectionProvider
  from inner classes to standalone classes
- Remove deprecated Hibernate 5 APIs: ClassLoaderDelegate,
  MetadataBuilderImpl, USE_NEW_ID_GENERATOR_MAPPINGS
- Replace Class.newInstance() with Constructor.newInstance() reflection
- Update Hibernate 7 API calls (MetadataBuilder, BootstrapServiceRegistry)
- Update META-INF service files to match renamed classes
- Update test fixtures for Hibernate 7 compatibility